<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:elevation="90dp"
        android:orientation="vertical"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="vertical"
            android:padding="2dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/pdf_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:elevation="7dp"
                android:text="@string/pdf_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button"
                android:elevation="7dp"
                android:text="@string/download"
                android:textAllCaps="false"
                android:textColor="@color/black"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/pdf_uploader"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="26dp"
                android:layout_marginBottom="4dp"
                android:text="@string/uploaded_by"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/pdf_uploader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="115dp"
                android:layout_marginTop="42dp"
                android:textColor="@color/black" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>
